# SENO

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
examples/: CMakeLists.txt
examples/include/: vulnerable.h
examples/src/: main.c  vulnerable.c
src/seno/: buffer_overflow.py  main.py
